core/tests/safety/test_rclosure_not_send.stderr
error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/safety/test_rclosure_not_send.rs:40:30
   |
40 |     RClosure::from_rust(&vm, move |val: f32| format!("this is a test: {} - {:?}", val, ty));
   |     -------------------      ---------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |                        |
   |     |                        `*const ()` cannot be sent between threads safely
   |     |                        within this `{closure@$DIR/tests/safety/test_rclosure_not_send.rs:40:30: 40:45}`
   |     required by a bound introduced by this call
   |
   = help: within `{closure@$DIR/tests/safety/test_rclosure_not_send.rs:40:30: 40:45}`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `UnSendType`
  --> tests/safety/test_rclosure_not_send.rs:35:8
   |
35 | struct UnSendType(PhantomData<*const ()>);
   |        ^^^^^^^^^^
note: required because it's used within this closure
  --> tests/safety/test_rclosure_not_send.rs:40:30
   |
40 |     RClosure::from_rust(&vm, move |val: f32| format!("this is a test: {} - {:?}", val, ty));
   |                              ^^^^^^^^^^^^^^^
note: required by a bound in `RClosure::<RawPtr<()>>::from_rust`
  --> src/vm/closure/types.rs
   |
   |     pub fn from_rust<T, R, F: Fn(T) -> R + 'static>(vm: &Vm, fun: F) -> Self
   |            --------- required by a bound in this associated function
...
   |         F: Send
   |            ^^^^ required by this bound in `RClosure::<RawPtr<()>>::from_rust`
